eval-api/kube/base/app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: llm-eval-app
  labels:
    app: llm-eval-app
    app.kubernetes.io/component: llm-eval-app
    app.kubernetes.io/instance: llm-eval-app
    app.kubernetes.io/name: llm-eval-app
    app.kubernetes.io/part-of: llm-eval-app
spec:
  to:
    kind: Service
    name: llm-eval-app
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
